--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
 	<tbody><tr>
 		
 		<td width="33%">
-		<img border="0" src="hw/hw1.gif" width="100%" height="246"></td>
+		<img border="0" src="hw/hw0.gif" width="100%" height="246"></td>
 		<td width="33%">
-		<img border="0" src="" width="100%" height="246"></td>
+		<img border="0" src="hw/hw1.gif" width="100%" height="246"></td>
 		<td>
 		<img border="0" src="" width="100%" height="246"></td>
 	</tr>
 	<tr>
+		<td width="33%">
+		<p align="center">
+		<a href="https://tommy92380.github.io/I4A/hw/hw0.html">
+		HW0</a></p></td>
 		<td width="33%">
 		<p align="center">
 		<a href="https://tommy92380.github.io/I4A/hw/hw1.html">
