--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<html><head></head><body><h1 align="center"><font face="Bookman Old Style">I4A08</font>
+<html><head></head><body><h1 align="center"><font face="Bookman Old Style">I4A08 ¶À¥K³Ç</font>
 </h1>
 <h1 align="center"><font face="Bookman Old Style"></font></h1>
 
+<a href="mailto:tommy92380@gmail.com">Email</a>
 <table border="1" width="100%">
 	<tbody><tr>
 		
