101410141014101410141014101410141014101410141014101ase enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head></head><body><h1 align="center"><font face="Bookman Old Style">I4A08 ¶À¥K³Ç</font>
+<html><head></head><body><h1 align="center"><font face="Bookman Old Style">I4A08 </font>
 </h1>
 <h1 align="center"><font face="Bookman Old Style"></font></h1>
 
