--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <html><head></head><body><h1 align="center"><font face="Bookman Old Style">I4A08</font>
 </h1>
-<h1 align="center"><font face="Bookman Old Style"></font></h1>
+<h1 align="center"><font face="Bookman Old Style">Game Programming HW</font></h1>
+<h2 align="front"><font face="Bookman Old Style">Email:</font><a href="mailto:tommy92380@gmail.com">tommy92380@gmail.com</a></h1>
 
-<a href="mailto:tommy92380@gmail.com">Email</a>
 <table border="1" width="100%">
 	<tbody><tr>
 		
 		<td width="33%">
-		<img border="0" src="hw/hw0.gif" width="100%" height="246"></td>
+		<img border="0" src="hw/hw0.gif" width="100%" height="260"></td>
 		<td width="33%">
-		<img border="0" src="hw/hw1.gif" width="100%" height="246"></td>
-		<td>
-		<img border="0" src="" width="100%" height="246"></td>
+		<img border="0" src="hw/hw1.gif" width="100%" height="260"></td>
+		<td width="33%">
+		<img border="0" src="hw/hw2.gif" width="100%" height="260"></td>
 	</tr>
 	<tr>
-		<td width="33%">
+		<td width="400">
 		<p align="center">
 		<a href="https://tommy92380.github.io/I4A/hw/hw0.html">
 		HW0</a></p></td>
-		<td width="33%">
+		<td width="400">
 		<p align="center">
 		<a href="https://tommy92380.github.io/I4A/hw/hw1.html">
 		HW1</a></p></td>
-		
+		<td width="400">
+		<p align="center">
+		<a href="https://tommy92380.github.io/I4A/hw/hw2.html">
+		HW2</a></p></td>
 	</tr>
